site/resources/fonts.css
/* --- Overpass --- */
@font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-thin.eot"); /* IE9 Compat Modes */
	src: url("/resources/fonts/overpass-thin.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
		 url("/resources/fonts/overpass-thin.woff2") format("woff2"), /* Super Modern Browsers */
		 url("/resources/fonts/overpass-thin.woff") format("woff"), /* Pretty Modern Browsers */
		 url("/resources/fonts/overpass-thin.ttf")  format("truetype"); /* Safari, Android, iOS */
		 font-weight: 200;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-thin-italic.eot");
	src: url("/resources/fonts/overpass-thin-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-thin-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-thin-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-thin-italic.ttf")  format("truetype");
		 font-weight: 200;
		 font-style: italic;
  }
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-extralight.eot");
	src: url("/resources/fonts/overpass-extralight.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-extralight.woff2") format("woff2"),
		 url("/resources/fonts/overpass-extralight.woff") format("woff"),
		 url("/resources/fonts/overpass-extralight.ttf")  format("truetype");
		 font-weight: 300;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-extralight-italic.eot");
	src: url("/resources/fonts/overpass-extralight-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-extralight-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-extralight-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-extralight-italic.ttf")  format("truetype");
		 font-weight: 300;
		 font-style: italic;
  }
  
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-light.eot");
	src: url("/resources/fonts/overpass-light.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-light.woff2") format("woff2"),
		 url("/resources/fonts/overpass-light.woff") format("woff"),
		 url("/resources/fonts/overpass-light.ttf")  format("truetype");
		 font-weight: 400;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-light-italic.eot");
	src: url("/resources/fonts/overpass-light-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-light-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-light-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-light-italic.ttf")  format("truetype");
		 font-weight: 400;
		 font-style: italic;
  }
  
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-regular.eot");
	src: url("/resources/fonts/overpass-regular.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-regular.woff2") format("woff2"),
		 url("/resources/fonts/overpass-regular.woff") format("woff"),
		 url("/resources/fonts/overpass-regular.ttf")  format("truetype");
		 font-weight: 500;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-italic.eot");
	src: url("/resources/fonts/overpass-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-italic.ttf")  format("truetype");
		 font-weight: 500;
		 font-style: italic;
  }
  
  
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-semibold.eot");
	src: url("/resources/fonts/overpass-semibold.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-semibold.woff2") format("woff2"),
		 url("/resources/fonts/overpass-semibold.woff") format("woff"),
		 url("/resources/fonts/overpass-semibold.ttf")  format("truetype");
		 font-weight: 600;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-semibold-italic.eot");
	src: url("/resources/fonts/overpass-semibold-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-semibold-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-semibold-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-semibold-italic.ttf")  format("truetype");
		 font-weight: 600;
		 font-style: italic;
  }
  
  
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-bold.eot");
	src: url("/resources/fonts/overpass-bold.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-bold.woff2") format("woff2"),
		 url("/resources/fonts/overpass-bold.woff") format("woff"),
		 url("/resources/fonts/overpass-bold.ttf")  format("truetype");
		 font-weight: 700;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-bold-italic.eot");
	src: url("/resources/fonts/overpass-bold-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-bold-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-bold-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-bold-italic.ttf")  format("truetype");
		 font-weight: 700;
		 font-style: italic;
  }
  
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-extrabold.eot");
	src: url("/resources/fonts/overpass-extrabold.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-extrabold.woff2") format("woff2"),
		 url("/resources/fonts/overpass-extrabold.woff") format("woff"),
		 url("/resources/fonts/overpass-extrabold.ttf")  format("truetype");
		 font-weight: 800;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-extrabold-italic.eot");
	src: url("/resources/fonts/overpass-extrabold-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-extrabold-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-extrabold-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-extrabold-italic.ttf")  format("truetype");
		 font-weight: 800;
		 font-style: italic;
  }
  
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-heavy.eot");
	src: url("/resources/fonts/overpass-heavy.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-heavy.woff2") format("woff2"),
		 url("/resources/fonts/overpass-heavy.woff") format("woff"),
		 url("/resources/fonts/overpass-heavy.ttf")  format("truetype");
		 font-weight: 900;
		 font-style: normal;
  }
  
  @font-face {
	font-family: 'overpass';
	src: url("/resources/fonts/overpass-heavy-italic.eot");
	src: url("/resources/fonts/overpass-heavy-italic.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-heavy-italic.woff2") format("woff2"),
		 url("/resources/fonts/overpass-heavy-italic.woff") format("woff"),
		 url("/resources/fonts/overpass-heavy-italic.ttf")  format("truetype");
		 font-weight: 900;
		 font-style: italic;
  }





/* --- Overpass Mono --- */
@font-face {
	font-family: 'overpass-mono';
	src: url("/resources/fonts/overpass-mono-light.eot");
	src: url("/resources/fonts/overpass-mono-light.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-mono-light.woff2") format("woff2"),
		 url("/resources/fonts/overpass-mono-light.woff") format("woff"),
		 url("/resources/fonts/overpass-mono-light.ttf")  format("truetype");
		 font-weight: 300;
		 font-style: normal;
  }
  
  
  
  @font-face {
	font-family: 'overpass-mono';
	src: url("/resources/fonts/overpass-mono-regular.eot");
	src: url("/resources/fonts/overpass-mono-regular.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-mono-regular.woff2") format("woff2"),
		 url("/resources/fonts/overpass-mono-regular.woff") format("woff"),
		 url("/resources/fonts/overpass-mono-regular.ttf")  format("truetype");
		 font-weight: 400;
		 font-style: normal;
  }
  
  
  
  @font-face {
	font-family: 'overpass-mono';
	src: url("/resources/fonts/overpass-mono-semibold.eot");
	src: url("/resources/fonts/overpass-mono-semibold.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-mono-semibold.woff2") format("woff2"),
		 url("/resources/fonts/overpass-mono-semibold.woff") format("woff"),
		 url("/resources/fonts/overpass-mono-semibold.ttf")  format("truetype");
		 font-weight: 500;
		 font-style: normal;
  }
  
  
  
  @font-face {
	font-family: 'overpass-mono';
	src: url("/resources/fonts/overpass-mono-bold.eot");
	src: url("/resources/fonts/overpass-mono-bold.eot?#iefix") format("embedded-opentype"),
		 url("/resources/fonts/overpass-mono-bold.woff2") format("woff2"),
		 url("/resources/fonts/overpass-mono-bold.woff") format("woff"),
		 url("/resources/fonts/overpass-mono-bold.ttf")  format("truetype");
		 font-weight: 600;
		 font-style: normal;
  }





/* --- Atkinson Hyperlegible --- */
@font-face {
	font-family: 'atkinson-hyperlegible';
	src: url("/resources/fonts/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2");
		 font-weight: normal;
		 font-style: normal;
}

@font-face {
	font-family: 'atkinson-hyperlegible';
	src: url("/resources/fonts/Atkinson-Hyperlegible-Italic-102a.woff2") format("woff2");
		 font-weight: normal;
		 font-style: italic;
}
@font-face {
	font-family: 'atkinson-hyperlegible';
	src: url("/resources/fonts/Atkinson-Hyperlegible-Bold-102a.woff2") format("woff2");
		 font-weight: bold;
		 font-style: normal;
}
@font-face {
	font-family: 'atkinson-hyperlegible';
	src: url("/resources/fonts/Atkinson-Hyperlegible-BoldItalic-102a.woff2") format("woff2");
		 font-weight: bold;
		 font-style: italic;
}





/* Inconsolata */
@font-face {
	font-family: "inconsolata";
	src: url("/resources/fonts/Inconsolata-VariableFont_wdth,wght.ttf") format("truetype");
	font-weight: 200 900;
	font-style: normal;
}





/* Fira Code */
@font-face {
	font-family: 'fira-code';
	src: url("/resources/FiraCode-VF.woff2") format("woff2") tech("variations");
	font-weight: 300 700;
	font-style: normal;
}

